--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,4 +55,4 @@ jobs:
             -e FREEZE_BOOT=${{ vars.FREEZE_BOOT }} \
             -e FREEZE_MAIN=${{ vars.FREEZE_MAIN }} \
             -v "$PWD:/project" \
-            rav3nh01m/micropython:${{ steps.docker_tag.outputs.image_tag }}
+            rav3nh01m/micropython_esp-idf:${{ steps.docker_tag.outputs.image_tag }}
