--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,3 +57,9 @@ jobs:
             -e FREEZE_MAIN=${{ env.FREEZE_MAIN }} \
             -v "$PWD:/project" \
             rav3nh01m/micropython_esp-idf:${{ steps.docker_tag.outputs.image_tag }}
+
+      - name: Upload dist artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware
+          path: dist/**
