--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,13 @@
+# This workflow will build and release custom firmware on every push to "main" branch
+
 name: Build and release
 
 env:
   CI: false
-  IMAGE_TAG: latest
-  BOARD: ESP32_GENERIC_C3
-  FREEZE_BOOT: false
-  FREEZE_MAIN: false
+  # The VERSION, MAJOR & MINOR actions variables must be set before workflow push to main brach.
+  # You can set them in Settings > Secrets and variables > Actions | Variables |
+  BUILD_VERSION: ${{ vars.VERSION }}.${{ vars.MAJOR }}.${{ vars.MINOR }}.${{ github.run_number }}
+
 on:
   push:
     branches:
@@ -23,43 +25,141 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Determine Docker image tag
-        id: docker_tag
+      # The IMAGE_TAG actions variable must be set before workflow push to main brach.
+      # If you preffer using environment variables change "vars." to "env."
+      # You can set them both in workflow "env:" section or in Settings > Secrets and variables > Actions
+      - name: Determine Docker image
+        id: docker_image
         run: |
-          IMAGE_NAME="rav3nh01m/micropython_esp-idf:$IMAGE_TAG"
+          IMAGE_BASE="rav3nh01m/micropython_esp-idf"
+          REQUESTED_TAG="${{ vars.IMAGE_TAG }}"
+          IMAGE="$IMAGE_BASE:$REQUESTED_TAG"
 
-          echo "Checking for image: $IMAGE_NAME"
+          echo "Checking for image: $IMAGE"
 
-          if docker pull "$IMAGE_NAME"; then
-            echo "Using tag: $IMAGE_TAG"
+          if docker pull "$IMAGE"; then
+            echo "Using image: $IMAGE"
           else
-            echo "Tag not found. Falling back to latest."
-            IMAGE_TAG="latest"
-            docker pull "rav3nh01m/micropython_esp-idf:latest"
+            echo "Image not found. Falling back to latest."
+            IMAGE="$IMAGE_BASE:latest"
+            docker pull "$IMAGE"
           fi
 
-          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
+      
+      # The container runs as "root" user, so HOST_UID and HOST_GID will set
+      # generated files ownership to runner user:group
 
-      - name: Get runner UID and GID
-        id: runner_ids
-        run: |
-          echo "uid=$(id -u)" >> "$GITHUB_OUTPUT"
-          echo "gid=$(id -g)" >> "$GITHUB_OUTPUT"
-
+      # The value of PROJECT_DIR and container mount path must match i.e "/project" in this case
+      # You can set FREEZE_BOOT and FREEZE_MAIN as "environment" or "actions variables"
+      # just check if you are using the correct type i.e "env." or "vars." 
       - name: Run MicroPython build container
         run: |
-          docker run --rm \
-            -e HOST_UID=${{ steps.runner_ids.outputs.uid }} \
-            -e HOST_GID=${{ steps.runner_ids.outputs.gid }} \
-            -e PROJECT_DIR=/project \
-            -e BOARD=${{ env.BOARD }} \
-            -e FREEZE_BOOT=${{ env.FREEZE_BOOT }} \
-            -e FREEZE_MAIN=${{ env.FREEZE_MAIN }} \
-            -v "$PWD:/project" \
-            rav3nh01m/micropython_esp-idf:${{ steps.docker_tag.outputs.image_tag }}
+          HOST_UID=$(id -u)
+          HOST_GID=$(id -g)
 
-      - name: Upload dist artifacts
-        uses: actions/upload-artifact@v4
+          docker run --rm \
+            -e HOST_UID="$HOST_UID" \
+            -e HOST_GID="$HOST_GID" \
+            -e PROJECT_DIR=/project \
+            -e BOARD="${{ vars.BOARD }}" \
+            -e FREEZE_BOOT="${{ vars.FREEZE_BOOT }}" \
+            -e FREEZE_MAIN="${{ vars.FREEZE_MAIN }}" \
+            -v "$PWD:/project" \
+            rav3nh01m/micropython:${{ steps.docker_tag.outputs.image }}
+
+      - name: Copy firmware with version in file name
+        run: |
+          mkdir -p release
+          for f in dist/*.bin; do
+            base=$(basename "$f" .bin)
+            cp "$f" "release/${base}-v${{ env.BUILD_VERSION }}.bin"
+          done
+
+      - name: Create firmware zip
+        working-directory: ./release
+        run: zip -j firmware-v${{env.BUILD_VERSION}}.zip firmware-v${{env.BUILD_VERSION}}.bin
+
+      - name: Create split firmware zip
+        working-directory: ./release
+        run: |
+          zip splitted_firmware-v${{ env.BUILD_VERSION }}.zip \
+            micropython*.bin \
+            bootloader*.bin \
+            partition-table*.bin
+
+      # This step is used when you need to upload files to controller file system
+       
+      # It depends on MicroPico extension for VS Code
+      # You can use any IDE you like, just adjust the files you need to upload.
+      
+      # This allows for freezing code inside the firmware and uploading the lib
+      # directory as code
+      # !!! If module exists in modules and lib you will receive un error !!! 
+      - name: Create code.zip
+        run: |
+          mkdir -p ./release/code
+      
+          if [ -d ".vscode" ]; then
+            cp -R .vscode ./release/code/
+            echo "Copied .vscode"
+          else
+            echo ".vscode directory not found — skipping"
+          fi
+
+          if [ -d "lib" ]; then
+            cp -R lib ./release/code/
+            echo "Copied lib"
+          else
+            echo "lib directory not found — skipping"
+          fi
+
+      # Conditional step that handles where main.py is stored - firmware or code
+      - name: Copy main.py (if not frozen)
+        if: ${{ vars.FREEZE_MAIN != 'true' }}
+        run: |
+          if [ -f "main.py" ]; then
+            cp main.py ./release/code/
+            echo "Copied main.py"
+          else
+            echo "main.py not found — skipping"
+          fi
+
+      # Conditional step that handles where boot.py is stored - firmware or code
+      - name: Copy boot.py (if not frozen)
+        if: ${{ vars.FREEZE_BOOT != 'true' }}
+        run: |
+          if [ -f "boot.py" ]; then
+            cp boot.py ./release/code/
+            echo "Copied main.py"
+          else
+            echo "boot.py not found — skipping"
+          fi
+
+      - name: Create code zip
+        working-directory: ./release/code
+        run: zip -r ../code-v${{env.BUILD_VERSION}}.zip .
+
+      - name: Authenticate Git
+        run: git remote set-url origin https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}
+
+      - name: Create tag
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag v${{env.BUILD_VERSION}}
+          git push origin v${{env.BUILD_VERSION}}
+
+      # Uploads files to release
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
         with:
-          name: firmware
-          path: dist/**
+          tag_name: v${{env.BUILD_VERSION}}
+          name: Release v${{env.BUILD_VERSION}}
+          prerelease: ${{vars.IS_PRERELEASE}}
+          files: |
+            ./release/firmware-v${{env.BUILD_VERSION}}.zip
+            ./release/splitted_firmware-v${{ env.BUILD_VERSION }}.zip
+            ./release/code-v${{env.BUILD_VERSION}}.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
