--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
             -e FREEZE_BOOT="${{ vars.FREEZE_BOOT }}" \
             -e FREEZE_MAIN="${{ vars.FREEZE_MAIN }}" \
             -v "$PWD:/project" \
-            rav3nh01m/micropython:${{ steps.docker_tag.outputs.image }}
+            "${{ steps.docker_image.outputs.image }}"
 
       - name: Copy firmware with version in file name
         run: |
